--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,24 @@ h1 {
     font-size: 3.5rem;
 }
 
-#countdown {
+.countdown {
     text-align: center;
     font-size: 2rem;
     justify-content: center;
+    margin: 10%;
 }
+
+.cronoButton {
+    background-color: white;
+    text-align: center;
+    display: grid;
+    margin: auto;
+    border-style: solid;
+    border-width: 2px;
+    font-size: 1.5rem;
+}
+
+.cronoButton:hover {
+    background-color: rgba(200, 200, 200);
+}
+
